@@ -502,14 +502,21 @@ sub run {
 		}
 	} else {
 		$self->{matched_text}->BeginTextColour(Wx::wxRED);
-		$self->{matched_text}->SetValue( Wx::gettext("No match") );
+		$self->{matched_text}->SetValue( Wx::gettext('No match') );
 		$self->{matched_text}->EndTextColour;
 	}
 
-	eval { $result_text =~ s{$regex}{$replace}; };
+	eval {
+		if ( $self->{global}->IsChecked )
+		{
+			$result_text =~ s{(?$xism:$regex)}{$replace}g;
+		} else {
+			$result_text =~ s{(?$xism:$regex)}{$replace};
+		}
+	};
 	if ($@) {
 		$self->{result_text}->BeginTextColour(Wx::wxRED);
-		$self->{result_text}->AppendText("Replace failure in $regex:  $@");
+		$self->{result_text}->AppendText( sprintf( Wx::gettext('Replace failure in %s:  %s'), $regex, $@ ) );
 		$self->{result_text}->EndTextColour;
 		return;
 	}
